--- a/photos.html
+++ b/photos.html
@@ -22,15 +22,15 @@
     <main>
         <div class="image-gallery">
             <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna" target="_blank"
-                rel="noopener noreferrer"><img src="C:\Users\s-A121-34\Desktop\kolokwium2\Test2/vr1.jpg" alt=""></a>
+                rel="noopener noreferrer"><img src="vr1.jpg" alt=""></a>
             <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna" target="_blank"
-                rel="noopener noreferrer"><img src="C:\Users\s-A121-34\Desktop\kolokwium2\Test2/vr2.jpg" alt=""></a>
+                rel="noopener noreferrer"><img src="vr2.jpg" alt=""></a>
             <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna" target="_blank"
-                rel="noopener noreferrer"><img src="C:\Users\s-A121-34\Desktop\kolokwium2\Test2/vr3.jpg" alt=""></a>
+                rel="noopener noreferrer"><img src="vr3.jpg" alt=""></a>
             <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_rozszerzona" target="_blank"
-                rel="noopener noreferrer"><img src="C:\Users\s-A121-34\Desktop\kolokwium2\Test2/vr4.jpg" alt=""></a>
+                rel="noopener noreferrer"><img src="vr4.jpg" alt=""></a>
             <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_rozszerzona" target="_blank"
-                rel="noopener noreferrer"><img src="C:\Users\s-A121-34\Desktop\kolokwium2\Test2/vr5.jpg" alt=""></a>
+                rel="noopener noreferrer"><img src="vr5.jpg" alt=""></a>
         </div>
     </main>
 </body>
